--- a/WebApplication1/Views/Planner/_TodoMessageBoard.cshtml
+++ b/WebApplication1/Views/Planner/_TodoMessageBoard.cshtml
@@ -1,6 +1,6 @@
-﻿@model WebApplication1.Models.Planner
+﻿@model WebApplication1.Models.TodoStickyNote
 
 <script>
     console.log('OnBoard');
-    console.log('@Model.Todos');
+    console.log('@Model.Message');
 </script>
