--- a/WebApplication1/Views/Planner/_TodoMessageBoard.cshtml
+++ b/WebApplication1/Views/Planner/_TodoMessageBoard.cshtml
@@ -1,6 +1,31 @@
 ﻿@model WebApplication1.Models.TodoStickyNote
 
+<div class="card">
+    <div class="container">
+        <h4><b>@Model.Date</b></h4>
+        <p>@Model.Message</p>
+    </div>
+</div>
+
 <script>
     console.log('OnBoard');
     console.log('@Model.Message');
 </script>
+
+<style>
+    .card {
+        /* Add shadows to create the "card" effect */
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+    }
+
+    /* On mouse-over, add a deeper shadow */
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+
+    /* Add some padding inside the card container */
+    .container {
+        padding: 2px 16px;
+    }
+</style>
